[package]
name = "grouper-lib"
version = "0.1.0"
edition = "2021"
description = "utilities dependency for grouper-desktop & grouper-cli"
license = "MIT"

[dependencies]
rand = "*"
serde = { version = "1.0", features = ["derive"]}
serde_json = "*"
csv = "*"
tokio = { version = "1.25", features = ["full"] }
thiserror = "1.0"
