[package]
name = "grouper-lib"
version = "0.1.10"
edition = "2021"
description = "utilities dependency for grouper-desktop & grouper-cli"
license = "MIT"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
csv = "1.2.0"
tokio = { version = "1.25", features = ["full"] }
thiserror = "1.0"
